--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     <input class="inpu" type="text" placeholder="Поле 8" required>
     <input class="inpu" type="text" placeholder="Поле 9" required>
     <input class="inpu" type="text" placeholder="Поле 10" required>
-    <input class="inpu" type="text" placeholder="Поле 10" required>
-    <input class="inpu" type="text" placeholder="Поле 130" required>
-    <input class="inpu" type="text" placeholder="Поле 113" required>
-    <input class="inpu" type="text" placeholder="Поле 55" required>
-    <input class="inpu" type="text" placeholder="Поле 333" required>
-    <input class="inpu" type="text" placeholder="Поле 325" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
     <button type="submit">Отправить</button>
   </form>
 </div>
@@ -170,25 +170,25 @@
     }
   });
 
-  // // Управление клавиатурой при фокусировке на input
-  // const inputFields = document.querySelectorAll('.inpu');
-  // inputFields.forEach(input => {
-  //   input.addEventListener('focus', () => {
-  //     // Настройка контекстных кнопок клавиатуры
-  //     if (input.type === 'number') {
-  //       webApp.showKeyboard({ one_time: false, type: 'number' }); // Числовая клавиатура
-  //     } else if (input.id === 'owner-phone') {
-  //       webApp.showKeyboard({ one_time: false, type: 'phone' }); // Телефонная клавиатура
-  //     } else {
-  //       webApp.showKeyboard({ one_time: false, type: 'text' }); // Текстовая клавиатура
-  //     }
-  //     webApp.expand();
-  //   });
-  //
-  //   input.addEventListener('blur', () => {
-  //     webApp.hideKeyboard(); // Скрываем клавиатуру после завершения ввода
-  //   });
-  // });
+  // Управление клавиатурой при фокусировке на input
+  const inputFields = document.querySelectorAll('.inpu');
+  inputFields.forEach(input => {
+    input.addEventListener('focus', () => {
+      // Настройка контекстных кнопок клавиатуры
+      if (input.type === 'number') {
+        webApp.showKeyboard({ one_time: false, type: 'number' }); // Числовая клавиатура
+      } else if (input.id === 'owner-phone') {
+        webApp.showKeyboard({ one_time: false, type: 'phone' }); // Телефонная клавиатура
+      } else {
+        webApp.showKeyboard({ one_time: false, type: 'text' }); // Текстовая клавиатура
+      }
+      adjustIframeHeight();
+    });
+
+    input.addEventListener('blur', () => {
+      webApp.hideKeyboard(); // Скрываем клавиатуру после завершения ввода
+    });
+  });
 
 </script>
 </body>
