--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="height=device-height, width=device-width">
   <title>Telegram Web App</title>
   <style>
       body {
@@ -60,13 +61,13 @@
     <input class="inpu" type="text" placeholder="Поле 7" required>
     <input class="inpu" type="text" placeholder="Поле 8" required>
     <input class="inpu" type="text" placeholder="Поле 9" required>
-    <input class="inpu" type="text" placeholder="Поле 10" required>
-    <input class="inpu" type="text" placeholder="Поле 10" required>
-    <input class="inpu" type="text" placeholder="Поле 130" required>
-    <input class="inpu" type="text" placeholder="Поле 113" required>
-    <input class="inpu" type="text" placeholder="Поле 55" required>
-    <input class="inpu" type="text" placeholder="Поле 333" required>
-    <input class="inpu" type="text" placeholder="Поле 325" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
+    <input class="inpu" type="text" placeholder="Поле 1" required>
     <button type="submit">Отправить</button>
   </form>
 </div>
