--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="viewport" content="height=device-height, width=device-width">
+  <meta name="viewport" content="height=device-height">
   <title>Telegram Web App</title>
   <style>
       body {
           margin: 0;
           padding: 0;
           font-family: Arial, sans-serif;
-          background-color: var(--tg-theme-bg-color, #ffffff);
-          color: var(--tg-theme-text-color, #000000);
           overflow-y: hidden; /* Prevents scrolling issues */
       }
       .container {
           display: flex;
           flex-direction: column;
           max-height: 100vh;
-          margin: 0 auto;
           overflow-y: auto;
           padding: 10px;
           box-sizing: border-box;
@@ -48,29 +45,8 @@
   </style>
 </head>
 <body>
-<div class="container" id="contentContainer">
-  <h1>Введите данные</h1>
-  <form id="inputForm">
-    <!-- Добавляем 10 инпутов -->
-    <input class="inpu" type="number" placeholder="Поле 1" required>
-    <input class="inpu" type="phone" placeholder="Поле 2" required>
-    <input class="inpu" type="text" placeholder="Поле 3" required>
-    <input class="inpu" type="number" placeholder="Поле 4" required>
-    <input class="inpu" type="text" placeholder="Поле 5" required>
-    <input class="inpu" type="text" placeholder="Поле 6" required>
-    <input class="inpu" type="text" placeholder="Поле 7" required>
-    <input class="inpu" type="text" placeholder="Поле 8" required>
-    <input class="inpu" type="text" placeholder="Поле 9" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <input class="inpu" type="text" placeholder="Поле 1" required>
-    <button type="submit">Отправить</button>
-  </form>
-</div>
+<div id="root"></div>
+
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
   // Initialize Telegram Web App
@@ -80,14 +56,44 @@
   tg.ready();
   tg.expand();
 
-  const container = document.getElementById('contentContainer');
+  tg.MainButton.setText('Submit');
+  tg.MainButton.show();
+  tg.MainButton.onClick(() => {
+    const inputs = document.querySelectorAll('input');
+    const values = Array.from(inputs).map(input => input.value);
+    console.log(values); // Process the data as needed
+    alert('Data submitted!');
+  });
+
+  // Create inputs dynamically
+  const container = document.createElement('div');
+  container.className = 'container';
+  for (let i = 1; i <= 20; i++) {
+    const input = document.createElement('input');
+    input.type = 'text';
+    input.placeholder = `Field ${i}`;
+    container.appendChild(input);
+  }
+
+  const submitButton = document.createElement('button');
+  submitButton.textContent = 'Submit';
+  submitButton.addEventListener('click', () => {
+    tg.MainButton.click();
+  });
+  container.appendChild(submitButton);
+
+  document.getElementById('root').appendChild(container);
 
   // Handle keyboard visibility changes
   function adjustHeight() {
     const vh = Math.max(document.documentElement.clientHeight || 0, window.innerHeight || 0);
     document.documentElement.style.setProperty('--vh', `${vh}px`);
-    container.style.maxHeight = `${vh}px`; // Adjust for padding and button
+    container.style.maxHeight = `${vh - 20}px`; // Adjust for padding and button
   }
+
+  tg.onEvent('main_button_click', () => {
+    adjustHeight();
+  });
 
   tg.onEvent('viewport_changed', () => {
     adjustHeight();
@@ -98,7 +104,6 @@
 </script>
 </body>
 </html>
-
 <!--<!DOCTYPE html>-->
 <!--<html lang="en">-->
 <!--<head>-->
