--- a/index.html
+++ b/index.html
@@ -55,13 +55,22 @@
   tg.ready();
   tg.expand();
 
+  tg.MainButton.setText('Submit');
+  tg.MainButton.show();
+  tg.MainButton.onClick(() => {
+    const inputs = document.querySelectorAll('input');
+    const values = Array.from(inputs).map(input => input.value);
+    console.log(values); // Process the data as needed
+    alert('Data submitted!');
+  });
+
   // Create inputs dynamically
   const container = document.createElement('div');
   container.className = 'container';
   for (let i = 1; i <= 20; i++) {
     const input = document.createElement('input');
     input.type = 'text';
-    input.placeholder = `Fielddd ${i}`;
+    input.placeholder = `Field ${i}`;
     container.appendChild(input);
   }
 
