--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           padding: 0;
           font-family: Arial, sans-serif;
           overflow-y: hidden; /* Prevents scrolling issues */
+          animation: tablefix 1s infinite;
       }
       .container {
           display: flex;
@@ -41,6 +42,16 @@
       button:hover {
           opacity: 0.9;
       }
+
+      @keyframes tablefix {
+          0% {
+              position: sticky;
+          }
+
+          100% {
+              position: relative;
+          }
+      }
   </style>
 </head>
 <body>
@@ -55,22 +66,13 @@
   tg.ready();
   tg.expand();
 
-  tg.MainButton.setText('Submit');
-  tg.MainButton.show();
-  tg.MainButton.onClick(() => {
-    const inputs = document.querySelectorAll('input');
-    const values = Array.from(inputs).map(input => input.value);
-    console.log(values); // Process the data as needed
-    alert('Data submitted!');
-  });
-
   // Create inputs dynamically
   const container = document.createElement('div');
   container.className = 'container';
   for (let i = 1; i <= 20; i++) {
     const input = document.createElement('input');
     input.type = 'text';
-    input.placeholder = `Field ${i}`;
+    input.placeholder = `Fie2ld ${i}`;
     container.appendChild(input);
   }
 
