--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 
       @keyframes tablefix {
           0% {
-              position: sticky;
+              transform: translateZ(0);
           }
-
+          50% {
+              transform: translateZ(1px);
+          }
           100% {
-              position: relative;
+              transform: translateZ(0);
           }
       }
   </style>
@@ -72,7 +74,7 @@
   for (let i = 1; i <= 20; i++) {
     const input = document.createElement('input');
     input.type = 'text';
-    input.placeholder = `Fie2ld ${i}`;
+    input.placeholder = `Field ${i}`;
     container.appendChild(input);
   }
 
