--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title>Telegram Web App</title>
   <style>
       body {
-          margin: 0;
-          padding: 0;
-          font-family: Arial, sans-serif;
-          overflow-y: hidden; /* Prevents scrolling issues */
-          animation: tablefix 1s infinite;
+          position: fixed;
+          left: 0;
+          right: 0;
+          top: 0;
+          height: var(--tg-viewport-stable-height, 100vh);
+          pointer-events: none;
       }
       .container {
           display: flex;
           flex-direction: column;
-          max-height: 100vh;
+          height: 100%;
           overflow-y: auto;
           padding: 10px;
           box-sizing: border-box;
@@ -41,18 +42,6 @@
 
       button:hover {
           opacity: 0.9;
-      }
-
-      @keyframes tablefix {
-          0% {
-              transform: translateZ(0);
-          }
-          50% {
-              transform: translateZ(1px);
-          }
-          100% {
-              transform: translateZ(0);
-          }
       }
   </style>
 </head>
@@ -88,18 +77,13 @@
   document.getElementById('root').appendChild(container);
 
   // Handle keyboard visibility changes
-  function adjustHeight() {
-    const vh = Math.max(document.documentElement.clientHeight || 0, window.innerHeight || 0);
-    document.documentElement.style.setProperty('--vh', `${vh}px`);
-    container.style.maxHeight = `${vh - 20}px`; // Adjust for padding and button
+  function setViewportData() {
+    $('.viewport-stable-border').attr('text', window.innerWidth + ' x ' + round(tg.viewportStableHeight, 2) + ' | is_expanded: ' + (tg.isExpanded ? 'true' : 'false'));
   }
 
-  tg.onEvent('viewport_changed', () => {
-    adjustHeight();
-  });
+  tg.onEvent('viewportChanged', setViewportData);
+  setViewportData();
 
-  window.addEventListener('resize', adjustHeight);
-  adjustHeight(); // Initial adjustment
 </script>
 </body>
 </html>
