--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           left: 0;
           right: 0;
           top: 0;
-          height: var(--tg-viewport-height, 100vh);
+          /*height: var(--tg-viewport-height, 100vh);*/
+          height: 100vh;
           overflow: hidden;
       }
 
@@ -76,12 +77,12 @@
     <input type="text" placeholder="Input 11">
     <input type="text" placeholder="Input 12">
     <input type="text" placeholder="Input 13">
-    <input type="text" placeholder="Input 14">
+    <input type="text" placeholder="Input 124">
     <input type="text" placeholder="Input 15">
-    <input type="text" placeholder="Input 16">
+    <input type="text" placeholder="Input 126">
     <input type="text" placeholder="Input 17">
     <input type="text" placeholder="Input 128">
-    <input type="text" placeholder="Input 119">
+    <input type="text" placeholder="Input 1219">
     <input type="text" placeholder="Input 210">
   </div>
 </div>
