--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           left: 0;
           right: 0;
           top: 0;
-          /*height: var(--tg-viewport-height, 100vh);*/
-          height: 100vh;
+          height: var(--tg-viewport-height, 100vh);
           overflow: hidden;
       }
 
@@ -37,7 +36,7 @@
           border-radius: 20px;
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
           overflow: auto;
-          padding-bottom: env(safe-area-inset-bottom);
+          /*padding-bottom: env(safe-area-inset-bottom);*/
       }
 
       .content {
@@ -77,13 +76,13 @@
     <input type="text" placeholder="Input 11">
     <input type="text" placeholder="Input 12">
     <input type="text" placeholder="Input 13">
-    <input type="text" placeholder="Input 124">
+    <input type="text" placeholder="Input 24">
     <input type="text" placeholder="Input 15">
-    <input type="text" placeholder="Input 126">
+    <input type="text" placeholder="Input 26">
     <input type="text" placeholder="Input 17">
-    <input type="text" placeholder="Input 128">
-    <input type="text" placeholder="Input 1219">
-    <input type="text" placeholder="Input 210">
+    <input type="text" placeholder="Input 28">
+    <input type="text" placeholder="Input 19">
+    <input type="text" placeholder="Input 20">
   </div>
 </div>
 
