--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           left: 0;
           right: 0;
           top: 0;
-          height: var(--tg-viewport-height, 100vh);
+          height: var(--tg-viewport-stable-height, 100vh);
           overflow: hidden;
       }
 
@@ -69,7 +69,7 @@
     <input type="text" placeholder="Input 4">
     <input type="text" placeholder="Input 5">
     <input type="text" placeholder="Input 6">
-    <input type="text" placeholder="Input 7">
+    <input type="text" placeholder="Input 72">
     <input type="text" placeholder="Input 8">
     <input type="text" placeholder="Input 9">
     <input type="text" placeholder="Input 10">
@@ -80,9 +80,9 @@
     <input type="text" placeholder="Input 15">
     <input type="text" placeholder="Input 26">
     <input type="text" placeholder="Input 17">
-    <input type="text" placeholder="Input 228">
-    <input type="text" placeholder="Input 129">
-    <input type="text" placeholder="Input 220">
+    <input type="text" placeholder="Input 28">
+    <input type="text" placeholder="Input 19">
+    <input type="text" placeholder="Input 20">
   </div>
 </div>
 
@@ -95,9 +95,9 @@
     Telegram.ready();
 
     // Обработка изменения viewport
-    Telegram.onEvent('viewportChanged', () => {
-      Telegram.expand();
-    });
+    // Telegram.onEvent('viewportChanged', () => {
+    //   Telegram.expand();
+    // });
   } else {
     console.warn('Telegram Web App API is not available.');
   }
