--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           right: 0;
           top: 0;
           height: var(--tg-viewport-stable-height, 100vh);
+          transition: height .2s ease;
           overflow: hidden;
       }
 
@@ -69,8 +70,8 @@
     <input type="text" placeholder="Input 4">
     <input type="text" placeholder="Input 5">
     <input type="text" placeholder="Input 6">
-    <input type="text" placeholder="Input 72">
-    <input type="text" placeholder="Input 8">
+    <input type="text" placeholder="Input 7">
+    <input type="text" placeholder="Input 877">
     <input type="text" placeholder="Input 9">
     <input type="text" placeholder="Input 10">
     <input type="text" placeholder="Input 11">
