--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <input type="text" placeholder="Input 4">
     <input type="text" placeholder="Input 5">
     <input type="text" placeholder="Input 6">
-    <input type="text" placeholder="Input 7">
+    <input type="text" placeholder="Input 72">
     <input type="text" placeholder="Input 8">
     <input type="text" placeholder="Input 9">
     <input type="text" placeholder="Input 10">
@@ -88,7 +88,7 @@
     <input type="text" placeholder="Input 26">
     <input type="text" placeholder="Input 17">
     <input type="text" placeholder="Input 238">
-    <input type="text" placeholder="Input 19">
+    <input type="text" placeholder="Input 129">
     <input type="text" placeholder="Input 20">
   </div>
 </div>
@@ -102,9 +102,10 @@
     Telegram.ready();
 
     // Обработка изменения viewport
-    // Telegram.onEvent('viewportChanged', () => {
-    //   Telegram.expand();
-    // });
+    Telegram.onEvent('viewportChanged', () => {
+      Telegram.ready();
+      Telegram.expand();
+    });
   } else {
     console.warn('Telegram Web App API is not available.');
   }
