--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           left: 0;
           right: 0;
           top: 0;
+          bottom: 0;
           height: var(--tg-viewport-stable-height, 100vh);
           transition: height 1s ease;
           overflow: hidden;
@@ -77,10 +78,10 @@
     <input type="text" placeholder="Input 11">
     <input type="text" placeholder="Input 12">
     <input type="text" placeholder="Input 13">
-    <input type="text" placeholder="Input 24">
+    <input type="text" placeholder="Input 224">
     <input type="text" placeholder="Input 15">
     <input type="text" placeholder="Input 26">
-    <input type="text" placeholder="Input 17">
+    <input type="text" placeholder="Input 127">
     <input type="text" placeholder="Input 28">
     <input type="text" placeholder="Input 19">
     <input type="text" placeholder="Input 20">
